--- a/BinaryTree/Tarea1.ipynb
+++ b/BinaryTree/Tarea1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,27 +25,21 @@
      "output_type": "stream",
      "text": [
       "PreOrden\n",
-      "5\n",
-      "1\n",
-      "3\n",
       "2\n",
-      "7\n",
-      "6\n",
+      "8\n",
+      "4\n",
+      "67\n",
       "InOrden\n",
-      "1\n",
       "2\n",
-      "3\n",
-      "5\n",
-      "6\n",
-      "7\n",
+      "4\n",
+      "8\n",
+      "67\n",
       "PostOrden\n",
+      "4\n",
+      "67\n",
+      "8\n",
       "2\n",
-      "3\n",
-      "1\n",
-      "6\n",
-      "7\n",
-      "5\n",
-      "True\n"
+      "El valor se encuentra en el arbol\n"
      ]
     }
    ],
@@ -96,6 +90,16 @@
     "            self.postOrden(nodo.right)\n",
     "            print(nodo.valor)\n",
     "\n",
+    "    def buscar(self, nodo, dato):\n",
+    "        if nodo == None:\n",
+    "            return False\n",
+    "        if nodo.valor == dato:\n",
+    "            return True\n",
+    "        if dato < nodo.valor:\n",
+    "            return self.buscar(nodo.left, dato)\n",
+    "        else:\n",
+    "            return self.buscar(nodo.right, dato)\n",
+    "\n",
     "def main():\n",
     "    arbol = Tree()\n",
     "    n = int(input(\"Ingrese la cantidad de nodos: \"))\n",
@@ -109,6 +113,12 @@
     "    arbol.inOrden(arbol.raiz)\n",
     "    print(\"PostOrden\")\n",
     "    arbol.postOrden(arbol.raiz)\n",
+    "\n",
+    "    dato = int(input(\"Ingrese el valor a buscar: \"))\n",
+    "    if arbol.buscar(arbol.raiz, dato):\n",
+    "        print(\"El valor se encuentra en el arbol\")\n",
+    "    else:\n",
+    "        print(\"El valor no se encuentra en el arbol\")\n",
     "\n",
     "    \n",
     "main()"
@@ -131,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
