Clasificador de emails spam

--- a/Unidad2/Tarea3/Clasificador.ipynb
+++ b/Unidad2/Tarea3/Clasificador.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,12 +117,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# Load the data\n",
+    "# cargar el dataset\n",
     "data = pd.read_csv('./Dataset/spam.csv', encoding='ISO-8859-1')\n",
     "\n",
-    "# drop unnecessary columns\n",
+    "# eliminar las columnas que no se utilizan\n",
     "data = data.drop([\"Unnamed: 2\", \"Unnamed: 3\", \"Unnamed: 4\"], axis=1)\n",
     "data\n",
+    "\n",
     "\n"
    ]
   },
@@ -164,7 +165,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
-    "# Renombrar las columnas para mayor claridad\n",
+    "# renombrar las columnas\n",
     "data.columns = ['label', 'message']\n",
     "\n",
     "# Convertir las etiquetas (ham -> 0, spam -> 1)\n",
@@ -174,8 +175,10 @@
     "X_train, X_test, y_train, y_test = train_test_split(data['message'], data['label'], test_size=0.2, random_state=42)\n",
     "\n",
     "\n",
+    "####### Aqui se entrenara el modelo\n",
     "\n",
-    "# mensajes para probar el modelo\n",
+    "\n",
+    "# mensajes para probar el modelo entrenado\n",
     "messages = [\n",
     "    \"Congratulations! You've been selected as a winner. Call 123456 to claim your prize.\",\n",
     "    \"Hey, what are you up to? Do you want to hang out later?\",\n",
