Se agrego el modelo de entrenamiento y readme

--- a/Unidad2/Tarea3/Clasificador.ipynb
+++ b/Unidad2/Tarea3/Clasificador.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Se importan los datos del dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +115,7 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,20 +135,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Se crea el modelo de entrenamiento con los datos anteriores"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9838565022421525\n",
-      "Confusion Matrix:\n",
-      "[[959   6]\n",
+      "Accuracy: 98.39%\n",
+      "Confusion matrix:\n",
+      " [[959   6]\n",
       " [ 12 138]]\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
       "\n",
       "           0       0.99      0.99      0.99       965\n",
       "           1       0.96      0.92      0.94       150\n",
@@ -150,11 +164,18 @@
       "   macro avg       0.97      0.96      0.96      1115\n",
       "weighted avg       0.98      0.98      0.98      1115\n",
       "\n",
-      "Congratulations! You've been selected as a winner. Call 123456 to claim your prize. -> spam\n",
-      "Hey, what are you up to? Do you want to hang out later? -> ham\n",
-      "Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question (std txt rate) T&C's apply 08452810075over18's -> spam\n",
-      "URGENT! Your mobile No 1234 was awarded a Prize -> spam\n",
-      "Hi, how are you? I hope you're doing well. -> ham\n"
+      "Message: Congratulations! You've been selected as a winner. Call 123456 to claim your prize.\n",
+      "Prediction: Spam\n",
+      "Message: Hey, what are you up to? Do you want to hang out later?\n",
+      "Prediction: Ham\n",
+      "Message: Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question (std txt rate) T&C's apply 08452810075over18's\n",
+      "Prediction: Spam\n",
+      "Message: URGENT! Your mobile No 1234 was awarded a Prize\n",
+      "Prediction: Spam\n",
+      "Message: Hi, how are you? I hope you're doing well.\n",
+      "Prediction: Ham\n",
+      "Message: Hi, i want ur help with something can u plz call me asap\n",
+      "Prediction: Ham\n"
      ]
     }
    ],
@@ -164,6 +185,11 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "\n",
+    "\n",
     "\n",
     "# renombrar las columnas\n",
     "data.columns = ['label', 'message']\n",
@@ -171,11 +197,30 @@
     "# Convertir las etiquetas (ham -> 0, spam -> 1)\n",
     "data['label'] = data['label'].map({'ham': 0, 'spam': 1})\n",
     "\n",
+    "# Eliminar filas con valores NaN en la columna 'label'\n",
+    "data = data.dropna(subset=['label'])\n",
+    "\n",
     "# Dividir los datos en entrenamiento y prueba\n",
     "X_train, X_test, y_train, y_test = train_test_split(data['message'], data['label'], test_size=0.2, random_state=42)\n",
     "\n",
     "\n",
     "####### Aqui se entrenara el modelo\n",
+    "#Converir el texto en una representación numérica\n",
+    "vectorizer = CountVectorizer(stop_words='english')\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "X_test_vectorized = vectorizer.transform(X_test)\n",
+    "\n",
+    "model = MultinomialNB()\n",
+    "model.fit(X_train_vectorized, y_train)\n",
+    "y_pred = model.predict(X_test_vectorized)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "confusion = confusion_matrix(y_test, y_pred)\n",
+    "classification = classification_report(y_test, y_pred)\n",
+    "\n",
+    "print(\"Accuracy: {:.2f}%\".format(accuracy * 100))\n",
+    "print(\"Confusion matrix:\\n\", confusion)\n",
+    "print(\"Classification report:\\n\", classification)\n",
     "\n",
     "\n",
     "# mensajes para probar el modelo entrenado\n",
@@ -184,8 +229,19 @@
     "    \"Hey, what are you up to? Do you want to hang out later?\",\n",
     "    \"Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question (std txt rate) T&C's apply 08452810075over18's\",\n",
     "    \"URGENT! Your mobile No 1234 was awarded a Prize\",\n",
-    "    \"Hi, how are you? I hope you're doing well.\"\n",
+    "    \"Hi, how are you? I hope you're doing well.\",\n",
+    "    \"Hi, i want ur help with something can u plz call me asap\",\n",
     "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Convertir los mensajes en una representación numérica\n",
+    "messages_vectorized = vectorizer.transform(messages)\n",
+    "\n",
+    "predictions = model.predict(messages_vectorized)\n",
+    "for message, prediction in zip(messages, predictions):\n",
+    "    print('Message:', message)\n",
+    "    print('Prediction:', 'Spam' if prediction == 1 else 'Ham')\n",
     "\n",
     "\n",
     "    \n"
@@ -194,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -208,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.5"
   },
   "orig_nbformat": 4
  },
