--- a/Unidad2/Tarea3/Clasificador.ipynb
+++ b/Unidad2/Tarea3/Clasificador.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,8 @@
       "Proporción de spam: 0.1341 Proporción de nospam: 0.8659\n",
       "Total Palabras spam: 3732\n",
       "Total Palabras no spam: 10882\n",
-      "Probabilidad de spam: 0.0030\n"
+      "Probabilidad de spam: 0.9829\n",
+      "Probabilidad de spam (%): 98.29%\n"
      ]
     }
    ],
@@ -364,8 +365,9 @@
     "\n",
     "    return P_spam_dado_mensaje\n",
     "\n",
-    "mensaje_prueba = \"hey buddy, can u plz call me asap\"\n",
-    "print(f\"Probabilidad de spam: {Bayes(mensaje_prueba):.4f}\")"
+    "mensaje_prueba = \"Congratulations! You've been selected as a winner. how are you? Yo are the winner\"\n",
+    "print(f\"Probabilidad de spam: {Bayes(mensaje_prueba):.4f}\")\n",
+    "print(f\"Probabilidad de spam (%): {Bayes(mensaje_prueba) * 100:.2f}%\")\n"
    ]
   }
  ],
@@ -385,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
