Reconocimiento de emociones

--- a/Unidad4/Tarea2/Modelo.ipynb
+++ b/Unidad4/Tarea2/Modelo.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparación y carga de los datos\n",
+    "\n",
+    "Se realizo la carga de datos previamente procesados (Tarea 1) para entrenar un modelo de clasificación de emociones faciales. Se trabajó con un conjunto de imágenes organizadas en carpetas por clase que fueron normalizadas (valores entre 0 y 1) usando ImageDataGenerator de Keras.\n",
+    "\n",
+    "Los datos se dividieron en tres conjuntos:\n",
+    "\n",
+    "- **Entrenamiento:** para ajustar el modelo.\n",
+    "\n",
+    "- **Validación:** para evaluar el rendimiento durante el entrenamiento.\n",
+    "\n",
+    "- **Prueba:** para medir el rendimiento final del modelo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -74,6 +91,14 @@
     "print(f\"Imágenes de entrenamiento: {train_generator.samples}\")\n",
     "print(f\"Imágenes de validación: {validation_generator.samples}\")\n",
     "print(f\"Imágenes de test: {test_generator.samples}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arquitectura del Modelo\n",
+    "Se diseñó un modelo de aprendizaje profundo basado en una red neuronal convolucional (CNN) para reconocer expresiones faciales. La arquitectura del modelo permite extraer características relevantes de las imágenes y clasificarlas en siete emociones distintas de manera eficiente."
    ]
   },
   {
@@ -355,9 +380,7 @@
     "\n",
     "- **EarlyStopping**: Detiene el entrenamiento si la pérdida de validación no mejora después de varias épocas, evitando el sobreajuste.\n",
     "- **ReduceLROnPlateau**: Reduce el learning rate automáticamente si el modelo se estanca, ayudando a mejorar la precisión.\n",
-    "- **ModelCheckpoint**: Guarda el modelo con mejor precisión en validación durante el entrenamiento.\n",
-    "\n",
-    "Estos callbacks ayudan a obtener mejores resultados sin entrenar de más.\n"
+    "- **ModelCheckpoint**: Guarda el modelo con mejor precisión en validación durante el entrenamiento.\n"
    ]
   },
   {
@@ -747,6 +770,14 @@
     "print(\"Guardando modelo final...\")\n",
     "model.save('modelo_emociones_final.keras')\n",
     "print(\"Modelo guardado como 'modelo_emociones_final.h5'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matriz de Confusión y métricas\n",
+    "Se genera una matriz de confusión para evaluar el desempeño del modelo en el conjunto de prueba, comparando las etiquetas reales con las predicciones. Esto permite visualizar con detalle qué clases se predicen correctamente y cuáles se confunden. Además, se imprime un reporte con métricas como precisión, recall y F1-score para cada clase, para así saber sobre el rendimiento del modelo."
    ]
   },
   {
