--- a/Unidad4/Tarea2/camara.ipynb
+++ b/Unidad4/Tarea2/camara.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementación del modelo en tiempo real\n",
+    "\n",
+    "Permite detectar emociones faciales en tiempo real utilizando la cámara web y un modelo previamente entrenado. De forma general hace lo siguiente:\n",
+    "\n",
+    "1. **Carga del modelo entrenado:** Se importa un modelo Keras previamente guardado (.keras) especializado en la clasificación de emociones.\n",
+    "\n",
+    "2. **Definición de clases:** Se establecen las etiquetas de las emociones que el modelo puede predecir.\n",
+    "\n",
+    "3. **Detección de rostros:** Se usa un clasificador Haar de OpenCV para detectar rostros dentro del video en vivo.\n",
+    "\n",
+    "4. **Preprocesamiento:** Cada rostro detectado se redimensiona y normaliza para coincidir con el formato esperado por el modelo.\n",
+    "\n",
+    "5. **Predicción y suavizado:** Se predice la emoción del rostro. Se implementa un suavizado con historial para evitar saltos bruscos entre emociones.\n",
+    "\n",
+    "6. **Visualización:** Se muestra la emoción detectada sobre el rostro en el video, junto con el porcentaje de confianza.\n",
+    "\n",
+    "\n",
+    "<small> **Nota:** _En caso de que quiera probar el programa, el modelo no esta en el repositorio debido a que excede 100 MB._ <small>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 172ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 222ms/step\n"
      ]
     }
    ],
@@ -59,11 +83,11 @@
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
     "        break\n",
-    "    \n",
+    "    frame = cv2.flip(frame, 1)\n",
     "    # Convertir a escala de grises para detección\n",
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
-    "    # Detectar rostros\n",
+    "    # Detectar rostros mediante un clasificador Haar de OpenCV\n",
     "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
     "    \n",
     "    for (x, y, w, h) in faces:\n",
